Chat Coach and Sentiment/objects/fields/AgentPerformanceEvaluation__c.field-meta.xml
<CustomField>
    <fullName>AgentPerformanceEvaluation__c</fullName>
    <label>Agent Performance Evaluation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>