Chat Coach and Sentiment/objects/fields/AgentPerformanceRating__c.field-meta.xml
<CustomField>
    <fullName>AgentPerformanceRating__c</fullName>
    <label>Agent Performance Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>